# aws-youtube-comment-analysis

./: .gitignore  Makefile  README.md  project.code-workspace  pyproject.toml  samconfig.yaml  template.yaml
.github/workflows/: deploy-sam-app.yaml  pipeline.yaml
architecture/: dac.yaml
events/: dynamodb_stream.json  dynamodb_stream_event.json  event.json
function/: pyproject.toml
function/src/: app.py  lambda_handler.py  requirements.txt
items/: dynamodb_item.json
lambda_code/: .gitignore  Makefile  data.json  pyproject.toml
lambda_code/src/: data_fetcher.py  data_processing.py  lambda_handler.py  utils.py
lambda_code/tests/: test_lambda.py
src/: app.py  handler.py  lambda_handler.py  requirements.txt
terraform/: .gitignore  main.tf  outputs.tf  provider.tf  terraform.tfstate.backup  variables.tf
terraform/modules/glue/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  variables.tf
terraform/modules/sfn/: main.tf  outputs.tf  state_machine.json  variables.tf
tests/: test_handler.py
tests/integration/: test_lambda.py
utils/: create_diagram.py
